--- a/MauiBankingExercise/Views/ListOfCustomersView.xaml
+++ b/MauiBankingExercise/Views/ListOfCustomersView.xaml
@@ -1,12 +1,60 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<views:BasePage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiBankingExercise.Views.ListOfCustomersView"
-             Title="ListOfCustomersView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
-</ContentPage>
+             xmlns:viewmodels="clr-namespace:MauiBankingExercise.ViewModels"
+             xmlns:views="clr-namespace:MauiBankingExercise.Views"
+             xmlns:models="clr-namespace:MauiBankingExercise.Models"
+             Title="Game Library" x:DataType="viewmodels:ListOfCustomersViewModel">
+
+
+
+    <views:BasePage.Resources>
+        <Style TargetType="Border">
+            <Setter Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal" />
+                        <VisualState x:Name="Selected">
+                            <VisualState.Setters>
+                                <Setter Property="BackgroundColor"
+                                        Value="LightSkyBlue" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+        </Style>
+    </views:BasePage.Resources>
+
+    <CollectionView ItemsSource="{Binding TheCustomers}" SelectionMode="Single" SelectedItem="{Binding SelectedCustomer}" SelectionChangedCommand="{Binding CustomerSelectedCommand}">
+        <CollectionView.ItemTemplate>
+            <DataTemplate x:DataType="models:Customer">
+
+                <Border Margin="5" Padding="5">
+                    <Border.StrokeShape>
+                        <RoundRectangle CornerRadius="20"/>
+                    </Border.StrokeShape>
+
+                    <Grid Padding="5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Label  FontAttributes="Bold" Margin="5" Text="{Binding FirstName}" Grid.Column="1"/>
+                        <Label FontAttributes="Bold"  Margin="5" Text="{Binding LastName}" Grid.Column="1" Grid.Row="1"/>
+                   
+
+                    </Grid>
+                </Border>
+            </DataTemplate>
+        </CollectionView.ItemTemplate>
+    </CollectionView>
+</views:BasePage>
